<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dlg_board"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="28dp"
        android:paddingTop="28dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_feedback"/>


        <com.a55haitao.wwht.ui.view.HaiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings_feedback_title"
            android:textColor="#999999"
            android:textSize="18sp"/>

        <com.a55haitao.wwht.ui.view.HaiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/settings_feedback_content"
            android:textColor="#999999"
            android:textSize="12sp"/>

        <com.a55haitao.wwht.ui.view.HaiTextView
            android:id="@+id/tv_no_thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/shape_btn_green"
            android:text="@string/settings_feedback_btn"
            android:textColor="#FFF"
            android:textSize="12sp"/>
    </LinearLayout>


</RelativeLayout>