<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPurple"
                tools:activity=".ui.fragment.shoppingcart.CenterShoppingCartFragment">

    <!--顶部导航栏-->
    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/border_bottom"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="left|center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:background="@mipmap/ic_left"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.a55haitao.wwht.ui.view.HaiTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:text="@string/shopping_cart"
                android:textColor="@color/colorGray333333"
                android:textSize="@dimen/size_36"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="horizontal">

            <com.a55haitao.wwht.ui.view.HaiTextView
                android:id="@+id/tv_edit"
                android:layout_width="40dp"
                android:layout_height="26dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/colorGray666666"
                android:textSize="@dimen/size_28"/>

            <ImageView
                android:id="@+id/img_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@mipmap/ic_service_title"/>

        </LinearLayout>
    </LinearLayout>

    <!-- container-->
    <com.a55haitao.wwht.ui.view.HaiSwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_bottom_bar"
        android:layout_below="@+id/ll_header">

        <ExpandableListView
            android:id="@+id/lv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:longClickable="true"/>

    </com.a55haitao.wwht.ui.view.HaiSwipeRefreshLayout>

    <!-- 购物车内暂时没有商品... -->
    <LinearLayout
        android:id="@+id/ll_shopping_cart_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.a55haitao.wwht.ui.view.HaiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_cart_empty"
            android:textColor="@color/colorGray999999"
            android:textSize="@dimen/size_24"/>

        <Button
            android:id="@+id/btn_go_shopping"
            android:layout_width="85dp"
            android:layout_height="30dp"
            android:layout_marginTop="@dimen/margin_big"
            android:background="@drawable/shape_btn_black"
            android:text="@string/go_shopping"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_22"/>

    </LinearLayout>

    <!-- Bottom View -->
    <RelativeLayout
        android:id="@+id/rl_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        android:visibility="invisible">

        <include layout="@layout/line_divider_m_1_e5e5e5"/>

        <!-- 全选 -->
        <CheckBox
            android:id="@+id/chk_select_all"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@null"
            android:checked="true"
            android:drawableLeft="@drawable/sl_shoppingcart_checkbox"
            android:drawablePadding="10dp"
            android:paddingLeft="10dp"
            android:text="@string/select_all"
            android:textSize="@dimen/size_24"/>

        <LinearLayout
            android:id="@+id/ll_product_info"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="150dp"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:orientation="horizontal">

                <com.a55haitao.wwht.ui.view.HaiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:text="@string/summary"
                    android:textColor="@color/colorGray333333"
                    android:textSize="@dimen/size_24"/>

                <com.a55haitao.wwht.ui.view.HaiTextView
                    android:id="@+id/tv_total_price"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/size_24"
                    app:expandTypeface="gotham"
                    tools:text="￥20979"/>
            </LinearLayout>

            <com.a55haitao.wwht.ui.view.HaiTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|right"
                android:text="@string/without_transfer_tax_fee"
                android:textColor="@color/colorGray999999"
                android:textSize="@dimen/size_20"/>

        </LinearLayout>

        <com.a55haitao.wwht.ui.view.HaiTextView
            android:id="@+id/tv_go_cash"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@color/colorBanana"
            android:gravity="center"
            android:text="@string/go_cash"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/size_32"/>

        <LinearLayout
            android:id="@+id/ll_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:visibility="invisible">

            <com.a55haitao.wwht.ui.view.HaiTextView
                android:id="@+id/tv_delete"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:background="@color/colorGray26241F"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/size_32"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
