<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:orientation="vertical">

    <!-- 标题栏 -->
    <com.a55haitao.wwht.ui.view.DynamicHeaderView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerTitleTxt="@string/change_pwd">

    </com.a55haitao.wwht.ui.view.DynamicHeaderView>

    <!-- container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <com.a55haitao.wwht.ui.view.HaiTextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorGray333333"
            tools:text="18000000002"/>

        <!-- divider -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDivider"/>

        <!-- 验证码 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/username_input_height"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verifyCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="6"
                android:textColorHint="@color/colorHint"
                android:textSize="14sp"/>

            <com.a55haitao.wwht.ui.view.HaiTextView
                android:id="@+id/tv_sendVerifyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/send_verify_code"
                android:textColor="@color/colorTextYellow"/>

        </LinearLayout>

        <!-- divider -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="25dp">

            <!-- 新密码 -->
            <EditText
                android:id="@+id/et_newPwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/username_input_height"
                android:layout_marginRight="25dp"
                android:background="@null"
                android:hint="@string/input_new_pwd"
                android:inputType="textPassword"
                android:maxLength="18"
                android:textColorHint="@color/colorHint"
                android:textSize="14sp"/>

            <!-- 清除输入 -->
            <ImageView
                android:id="@+id/img_clear_input"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_clear_input"
                android:visibility="invisible"/>
        </RelativeLayout>

        <!-- divider -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorDivider"/>

        <!-- 提交 -->
        <Button
            android:id="@+id/btn_submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_btn_black"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

    </LinearLayout>
</LinearLayout>